# sunstead

./: .cta.json  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  devme.toml  drizzle.config.ts  manuscript  manuscript.md  package.json  plan.md  pyproject.toml  skills-lock.json  vite.config.ts
.codex/: config.toml
.storybook/: main.ts  preview.js
docs/: aiven-challenge-overview.md  carboplatin-report-agent-plan.md  event-schemas.json  platform-runbook.md  sanitas-agent-behavior-plan.md  sanitas-demo-decisions.md
drizzle/: 0001_silky_karnak.sql
implementation/: 00_PLAN.md  01_RESEARCH_AIVEN_MCP.md  02_RESEARCH_DATA_SOURCES.md  03_ARCHITECTURE.md  04_DATA_MODEL_POSTGRES.md  05_KAFKA_EVENT_DESIGN.md  06_SOURCE_INGESTION_FRAMEWORK.md  07_PYDANTIC_AI_AGENTS.md  08_ENTITY_RESOLUTION.md  09_NEO4J_GRAPH_SCHEMA.md  10_RISK_MODEL.md  11_GRAFANA_OBSERVABILITY.md  12_SECURITY_GOVERNANCE.md  13_REPOSITORY_STRUCTURE.md  14_IMPLEMENTATION_PHASES.md  15_TESTING_STRATEGY.md  16_LOCAL_TO_CLOUD_MIGRATION.md  GOAL.md
infra/: docker-compose.yml
migrations/: 0001_extensions_and_evidence_schema.sql  0002_human_review_queue.sql  0003_agent_finding_runtime_metadata.sql
sources/: eia_energy_prices.yaml  fda_drug_shortages.yaml  fda_inspections_dashboard.yaml  fda_warning_letters.yaml  freight_proxy_prices.yaml  gdacs_events.yaml  gdelt_doc_search.yaml  openfda_device_enforcement.yaml  openfda_device_registrationlisting.yaml  openfda_drug_enforcement.yaml  openfda_drug_ndc.yaml  reliefweb_reports.yaml  search_trend_signals.yaml  (+3 more)
src/: env.d.ts  (+3 more)
(+241 files in other folders)
