[project]
name = "supply-intel-platform"
version = "0.1.0"
description = "Backend implementation for the unnamed supply-chain intelligence platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.12.0",
  "asyncpg>=0.30.0",
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "neo4j>=5.28.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pydantic>=2.11.0",
  "pydantic-ai>=1.0.0",
  "pydantic-settings>=2.7.0",
  "pypdf>=5.1.0",
  "pyyaml>=6.0.2",
  "tenacity>=9.0.0",
  "typer>=0.15.1",
]

[project.scripts]
platform = "supply_intel.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.6",
  "types-PyYAML>=6.0.12.20240917",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supply_intel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["supply_intel"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
